# spellck

./: .gitignore  .travis.yml  Cargo.toml  README.md  deploy-docs.sh  example.rs  main.rs  search-index.js  self.txt  stdlib.txt  test.rs  visitor.rs  words.rs
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/iter/: trait.Iterator.js
implementors/core/marker/: trait.Copy.js
implementors/syntax/visit/: trait.Visitor.js
spellck/: fn.plugin_registrar.html  index.html  stability.html  stability.json
spellck/visitor/: index.html  struct.Position.html  struct.SpellingVisitor.html
spellck/words/: fn.subwords.html  index.html  struct.SubwordIter.html
spellck_standalone/: index.html  stability.html  stability.json
src/: spellck.rs  visitor.rs
src/spellck/: lib.rs  lib.rs.html  lint.rs  visitor.rs  visitor.rs.html  words.rs  words.rs.html
src/spellck_standalone/: spellck_standalone.rs.html
src/stem/: stem.rs.html
stem/: fn.get.html  index.html  stability.html  stability.json
